# grapevine-mcp

./: LICENSE  README.md  pyproject.toml
grapevine_mcp/: __init__.py  __main__.py  inprocess_server.py  server.py  staffbase_adapter.py  staffbase_client.py
