[project]
name = "grapevine-mcp"
version = "0.1.0"
description = "Unofficial MCP server for accessing data from Staffbase"
authors = [
    {name = "Michael Ikemann", email = "michael.ikemann@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"
keywords = [
    "staffbase",
    "mcp",
    "intranet",
    "news",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/Alyxion/grapevine-mcp"
Repository = "https://github.com/Alyxion/grapevine-mcp.git"
Issues = "https://github.com/Alyxion/grapevine-mcp/issues"

[tool.poetry]
packages = [
    {include = "grapevine_mcp"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
